--- a/index.html
+++ b/index.html
@@ -22,10 +22,28 @@
       </div>
     </model-viewer>
     <model-viewer id="IITPL" style="display:none" src="iitpl.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+      <div style="margin: 1em 0;text-align: center;">
+        <button onclick="myFunction(1)" id= "TNA.glb">1</button>
+        <button onclick="myFunction(2)" id="iitpl.glb">2</button>
+        <button onclick="myFunction(3)" id="asset.glb">3</button>
+        <button onclick="myFunction(4)" id="Ring Applicator.glb">4</button>
+      </div>
       </model-viewer>
     <model-viewer id="ASSET" style="display:none" src="asset.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+      <div style="margin: 1em 0;text-align: center;">
+        <button onclick="myFunction(1)" id= "TNA.glb">1</button>
+        <button onclick="myFunction(2)" id="iitpl.glb">2</button>
+        <button onclick="myFunction(3)" id="asset.glb">3</button>
+        <button onclick="myFunction(4)" id="Ring Applicator.glb">4</button>
+      </div>
       </model-viewer>
     <model-viewer id="RING" style="display:none" src="Ring Applicator.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+      <div style="margin: 1em 0;text-align: center;">
+        <button onclick="myFunction(1)" id= "TNA.glb">1</button>
+        <button onclick="myFunction(2)" id="iitpl.glb">2</button>
+        <button onclick="myFunction(3)" id="asset.glb">3</button>
+        <button onclick="myFunction(4)" id="Ring Applicator.glb">4</button>
+      </div>
       </model-viewer>
    
 
